# erley_algo

./: CMakeLists.txt  LR1.cpp  earley.cpp  grammar.cpp  grammar.txt  main.cpp  parser.cpp  reader.cpp  readme.md  test.cpp
core/: CMakeLists.txt  earley.cpp  grammar.cpp  parser.cpp  reader.cpp
include/: earley.h  grammar.h  parser.h
